--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>MilheiroPro - Home</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 </head>
 <body>
     <header>
-        <h1>💎 MilheiroPro</h1>
+        <img src="assets/logo redonda para site de milhas chamado Milheiros com um avião e fundo branco.png" alt="Logo Milheiros" class="logo">
+        <h1> MilheiroPro ✈️</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Início</a></li>
@@ -22,7 +24,6 @@
                         <span class="slider"></span>
                     </label>
                 </li>
-                
             </ul>
         </nav>
     </header>
